samples/_failures_safe/1761650546_573512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a679ae.c: In function ‘bfs_traversal’:
./samples/SAFE/__tmp_63a679ae.c:185:16: error: missing terminating " character
  185 |         printf("%d
      |                ^~~
./samples/SAFE/__tmp_63a679ae.c:185:9: error: expected expression at end of input
  185 |         printf("%d
      |         ^~~~~~
./samples/SAFE/__tmp_63a679ae.c:185:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63a679ae.c:185:9: error: expected declaration or statement at end of input
